[gd_scene load_steps=6 format=2]

[ext_resource path="res://resources/images/MenuInterface/icons/right normal.png" type="Texture" id=1]
[ext_resource path="res://resources/images/MenuInterface/icons/right pressed.png" type="Texture" id=2]
[ext_resource path="res://AutomatonMode/Scripts/Interface/Indexer.gd" type="Script" id=3]
[ext_resource path="res://resources/images/MenuInterface/icons/left normal.png" type="Texture" id=4]
[ext_resource path="res://resources/images/MenuInterface/icons/left pressed.png" type="Texture" id=5]

[node name="Indexer" type="Control"]
anchor_right = 0.078
anchor_bottom = 0.057
margin_right = 0.159996
margin_bottom = -0.0400009
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
max_index = 10

[node name="RightButton" type="TextureButton" parent="."]
margin_left = 60.0
margin_right = 100.0
margin_bottom = 40.0
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 2 )

[node name="LeftButton" type="TextureButton" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )

[connection signal="index_changed" from="." to="." method="test"]
[connection signal="pressed" from="RightButton" to="." method="_on_RightButton_pressed"]
[connection signal="pressed" from="LeftButton" to="." method="_on_LeftButton_pressed"]
